<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EmergencyResponder</string>
    <string name="action_settings">Settings</string>
    <string name="allClearButtonText">I am Safe and Well</string>
    <string name="maydayButtonText">MAYDAY! MAYDAY! MAYDAY!</string>
    <string name="setupautoresponderButtonText">Setup Auto Responder</string>
    <string name="allClearText">I am safe and well. Worry not!</string>
    <string name="maydayText">Tell my mother I love her.</string>
    <string name="querystring">are you OK?</string>
    <string name="querylistprompt">These people want to know if you\'re OK</string>
    <string name="includelocationprompt">Include Location in Reply</string>
    <string name="user_preferences">com.sunny.emergencyresponder.preferences</string>
    <string name="respondWithPrompt">Respond with</string>
    <string name="transmitLocationPrompt">Transmit location</string>
    <string name="autoRespondDurationPrompt">Auto-respond for</string>
    <string name="enableButtonText">Enable</string>
    <string name="disableButtonText">Disable</string>

</resources>